; ModuleID = '/home/carl/AnghaBench/git/extr_oidset.c_oidset_init.c'
source_filename = "/home/carl/AnghaBench/git/extr_oidset.c_oidset_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.oidset = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @oidset_init(%struct.oidset* %0, i64 %1) #0 {
  %3 = alloca %struct.oidset*, align 8
  %4 = alloca i64, align 8
  store %struct.oidset* %0, %struct.oidset** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.oidset*, %struct.oidset** %3, align 8
  %6 = getelementptr inbounds %struct.oidset, %struct.oidset* %5, i32 0, i32 0
  %7 = call i32 @memset(i32* %6, i32 0, i32 4)
  %8 = load i64, i64* %4, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %15

10:                                               ; preds = %2
  %11 = load %struct.oidset*, %struct.oidset** %3, align 8
  %12 = getelementptr inbounds %struct.oidset, %struct.oidset* %11, i32 0, i32 0
  %13 = load i64, i64* %4, align 8
  %14 = call i32 @kh_resize_oid_set(i32* %12, i64 %13)
  br label %15

15:                                               ; preds = %10, %2
  ret void
}

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @kh_resize_oid_set(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
